# data-to-graph

./: .Dockerfile  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sbt  docker-compose.yaml  prometheus.yml  pyproject.toml
.github/workflows/: deploy-image.yml  deploy-page.yml  gitleaks.yml
frontend/data2graph/: .dockerignore  Dockerfile  package.json  tailwind.config.js
frontend/gh-pages/: .gitignore  README.md  i18n.ts  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/json2graph/: package-lock.json
mongo-seed/: import.sh
mongo-seed/stackoverflow/: questions-1.json  questions-10.json  questions-100.json  questions-1000.json  questions-101.json  questions-102.json  questions-103.json  questions-104.json  questions-105.json  questions-106.json  questions-107.json  questions-108.json  questions-109.json  questions-11.json  questions-110.json  questions-111.json  questions-112.json  questions-113.json  questions-114.json  questions-115.json  questions-116.json  questions-117.json  questions-118.json  questions-119.json  questions-12.json  questions-120.json  questions-121.json  questions-122.json  questions-123.json  questions-124.json  questions-125.json  questions-126.json  questions-127.json  questions-128.json  questions-129.json  questions-13.json  questions-130.json  questions-131.json  questions-132.json  questions-133.json  (+960 more)
prometheus/: prometheus.yml
src/: asteroids_data_migration.py  main.py  nasa_crawler.py  stack_overflow_crawler.py  stack_overflow_migration.py  validation.py
(+158 files in other folders)
